  * Each slideshow now has a unique slideshow.conf file.
  * Split link-core and link-default for slideshows. link-default
    is NOT symlinked to a central place, encouraging customization.
  * Generated icons now go straight to the build directory.
  * Merging new Xubuntu slideshow.
  * Merging new visuals for Kubuntu slideshow.

  [ Evan Dandrea ]
  * Fix typo in Kubuntu chat slide.

 -- Dylan McCall <dylan@dylan-laptop>  Wed, 24 Feb 2010 10:33:54 -0800

ubiquity-slideshow-ubuntu (14) lucid; urgency=low

  * Work around pkgstriptranslations's dislike for empty po files.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 12 Feb 2010 12:11:57 +0000

ubiquity-slideshow-ubuntu (13) lucid; urgency=low

  [ Dylan McCall ]
  * Updated localization setup and build scripts. Localization
    is now done with a single template file for each slideshow
    package.
  * Build script must use brute force (and cmp) to decide which
    slides have actually been translated.
  * Added htmlclean to remove unnecessary content from built
    slides.
  * Added room for ubuntu-upgrade slides.

  [ Lionel Le Folgoc ]
  * Initial import of Xubuntu slides lp: #514011

  [ Evan Dandrea ]
  * Bump release in welcome.html to 10.04.
  * Remove htmlclean as its in universe and not currently worth the MIR.
  * Tidy up generate-local-slides.sh and make it less noisy.
  * Updated translations from Launchpad.
  * Add update-launchpad-translations.sh, a small bit of shell code to
    take the grunt work out of updating translations.
  * Place ubiquity-slideshow-ubuntu-upgrade files in their own
    directory.

 -- Evan Dandrea <evand@ubuntu.com>  Fri, 12 Feb 2010 11:47:05 +0000

ubiquity-slideshow-ubuntu (12) lucid; urgency=low

  [ Dylan McCall ]
  * Removed unused overlay image from earlier design.
  * Added HTML comments to slides, which will become translator
    comments when all the pieces are in place. (LP: #435834)
  * Tidied up writing in the following slides: