@@ -1,6 +1,5 @@
 #!/bin/sh
 set -e
-
 mkpo ()
 {
 	mkdir -p "po/$1"
@@ -9,7 +8,7 @@ mkpo ()
 		slidename="$(basename $slide)"
 		[ "$slidename" = "index.html" ] && continue
 		mkdir -p "po/$1/.tmp"
-		html2po -P $slide -o "po/$1/.tmp/$slidename.pot"
+		po4a-updatepo -M UTF-8 -f xhtml -m $slide -p "po/$1/.tmp/$slidename.pot"
 	done
 	
 	msgcat po/$1/.tmp/*.pot > "po/$1/slideshow-$1.pot"
