@@ -12,6 +12,7 @@ ubiquity-slideshow-ubuntu (15) UNRELEASED; urgency=low
 
   [ Evan Dandrea ]
   * Fix typo in Kubuntu chat slide.
+  * Move from po2html, which is no longer included in Debian, to po4a.
 
  -- Dylan McCall <dylan@dylan-laptop>  Wed, 24 Feb 2010 10:33:54 -0800
 
